Signed-off-by: licailing <licailing1993@sina.com>

--- a/src/lib/scss/a-sprite.scss
+++ b/src/lib/scss/a-sprite.scss
@@ -1,4 +1,4 @@
-$spriteSrc:'/images/sprites/a1491450202719.png';
+$spriteSrc:'/images/sprites/a.png';
 	$icon-a1 : 179px 0px -179px 0px 64px 64px 243px 229px $spriteSrc icon-a1;
 	$icon-a2 : 179px 64px -179px -64px 64px 64px 243px 229px $spriteSrc icon-a2;
 	$icon-a3 : 179px 128px -179px -128px 24px 24px 243px 229px $spriteSrc icon-a3;
